# streamlit_deployment

./: local.yml  production.yml
compose/streamlit/: Dockerfile
compose/traefik/: Dockerfile  traefik.yml
src/: .gitignore  Home.py  au.csv  bg.csv  cz.csv  dk.csv  ee.csv  hr.csv  hu.csv  ie.csv  in.csv  index.html  kz.csv  lt.csv  lv.csv  nl.csv  nz.csv  pl.csv  pyproject.toml  requirements.txt  ro.csv  rs.csv  sk.csv  streamlit_app.py  tr.csv  ua.csv  uz.csv  za.csv
src/pages/: 10_🌍_Estonia.py  11_🌍_Romania.py  12_🌍_Croatia.py  13_🌍_Lithuania.py  14_🌍_Serbia.py  15_🌍_Australia.py  16_🌍_Turkish.py  17_🌍_Kazakhstan.py  18_🌍_SouthAfrica.py  19_🌍_India.py  1_🌍_Austria.py  20_🌍_Ukraine.py  21_🌍_NewZeland.py  2_🌍_Poland.py  3_🌍_Slovakia.py  4_🌍_Czech.py  5_🌍_Bulgary.py  6_🌍_Ireland.py  7_🌍_Denmark.py  8_🌍_Hungary.py  9_🌍_Latvia.py
